--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,18 @@ body {
     margin-bottom: 700px;
     text-align: center
 }
+.probel {
+    letter-spacing: 1px;
+    color:ghostwhite;
+    font-family: 'Roboto', sans-serif;
+    font-size: 400%;
+    text-align: center
+}
 .links {
     font-family: 'Roboto', sans-serif;
     position: absolute;
     margin-right: 25px;
-    margin-top: 90px;
+    margin-top: 100px;
 }
 .links li {
     list-style-type: none;
@@ -36,3 +43,11 @@ body {
     font-size: 300%;
     color: white;
 }
+.probel {
+    letter-spacing: 1px;
+    color:ghostwhite;
+    font-family: 'Roboto', sans-serif;
+    font-size: 400%;
+    text-align: center
+}
+
